# MoE_Interp

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  RESEARCH.md  main.py  note  note.md  notebook.py  pyproject.toml
docs/: README.md  analysis.md  architecture.md  capture.md  circuit.md  pursuit.md  setup.md  storage.md  toxic_dla.md
extra/: notebook_lens.py
notebooks/: notebook_analysis.py  notebook_circuits.py  notebook_clustering.py  notebook_encode.py  notebook_extract.py  notebook_pursuit.py  notebook_pursuit_marimo.py
notebooks/circuits/: dla.py  editing.py  localize.py  localized_steer.py  patching.py  steer.py
report/: main.typ  refs.bib
report/sections/: appendix.typ  background.typ  conclusion.typ  introduction.typ  methods.typ  results.typ
scripts/: atom_polysemanticity.py  build_expert_explorer.py  download.py  download.sh  download_model.sh  nlp_report.py  run_cluster.sh  setup.sh  setup_env.sh  unsupervised_report.py
scripts/cineca/: analyze.sh  analyze_gpt_oss.sh  circuit_full.sh  circuit_gpt_oss.sh  circuit_runner.py  downweight_runner.py  extract.sh  extract_gpt_oss.sh
scripts/orfeo/: analyze.sh  circuit.sh  downweight.sh  extract.sh  interactive.sh  rigor.sh  triviaqa.sh
scripts/rigor/: README.md  bootstrap.py  group_ablation.py  sufficiency_curve.py
slurm_scripts/: setup_cache.sh
slurm_scripts/cineca/: extract.sh
slurm_scripts/orfeo/: extract.sh  interactive_notebook.sh
src/: analyze.py  cache.py  capture.py  checkpoint.py  concepts.py  constants.py  data.py  dictionary.py  display.py  environment.py  model_adapter.py  parser.py  plot.py  plots.py  pursuit.py  somp.py  sparse_decomposition.py  word_dictionary.py
src/moe_interp/: config.py  grids.py  parser.py
src/moe_interp/analysis/: README.md  __init__.py  adp.py  clustering.py  common.py  decode.py  logit_lens.py  normalize.py  pipeline.py  report.py  report_html.py  summaries.py  toxic_dla.py
src/moe_interp/capture/: __init__.py  cache.py  capture.py  model_adapter.py
src/moe_interp/circuit/: __init__.py  attribution.py  compare.py  concept_probe.py  direction.py  downweight.py  editing.py  expert_edit.py  expert_sets.py  intervene.py  neuron.py  patching.py  pipeline.py  prompts.py  relp.py  report.py  steer.py  toxicity.py
src/moe_interp/io/: data.py  plots.py
src/moe_interp/pursuit/: __init__.py  concepts.py  decomposition.py  dictionary.py  pursuit.py
tests/: _helpers.py  test_analysis.py  test_cache.py  test_capture.py  test_circuit.py  test_core.py  test_data.py  test_model_adapter.py  test_pursuit.py  test_reservoir.py  test_toxic_dla.py
