[project]
name = "moe-interp"
version = "0.1.0"
description = "Expert Pursuit: Probing Expert Specialization in MoE Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.20.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "nnsight>=0.5.15",
    "plotly>=5.0.0",
    "pytest>=9.0.2",
    "h5py>=3.10.0",
    "torch>=2.5.0,<2.10",
    "tqdm>=4.67.3",
    "transformers>=4.46.0",
    "python-dotenv>=1.0.0",
]

# PyTorch sources: PyPI for macOS (MPS support), CUDA index for Linux
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

# NOTE: This ca be added if we want to use that instead
# "residual",
# residual = { git = "https://github.com/Flegyas/ResiDual.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
