[project]
name = "moe-interp"
version = "0.1.0"
description = "MoE interpretability: Expert Pursuit + causal toxic-expert circuits"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.20.0",
    "nnsight>=0.7.0",
    "plotly>=5.0.0",
    "h5py>=3.10.0",
    "torch>=2.5.0,<2.10",
    "tqdm>=4.67.3",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "transformers>=5.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "dadapy>=0.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
notebooks = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
]


# NOTE: Set up build system to be from uv
[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

# PyTorch sources: PyPI for macOS (MPS support), CUDA index for Linux
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
